CB-22403 - Azure RHEL8 golden image based Prewarmed/FreeIPA images require plan information
This commit:
 - anticipates and checks the presence of "source-image" tag inside "package-versions" section of the image catalog for a given image
 - if it is found then for Azure, we expect it to contain a valid Marketplace image urn
   - we validate its format
   - we use it in the arm-v2.ftl to inject plan, publisher and offer information that are extracted from the urn for all the VM-s
 - if it is not found then nothing is changed in the ARM templates
 - it is not used for any of the other providers yet