@@ -4,15 +4,18 @@ import java.util.Collections;
 import java.util.Map;
 import java.util.Optional;
 
+import org.junit.platform.commons.util.StringUtils;
 import org.springframework.core.convert.converter.Converter;
 import org.springframework.stereotype.Component;
 
 import com.sequenceiq.cloudbreak.cloud.model.Image;
+import com.sequenceiq.cloudbreak.cloud.model.catalog.ImagePackageVersion;
 import com.sequenceiq.common.api.type.InstanceGroupType;
 import com.sequenceiq.freeipa.entity.ImageEntity;
 
 @Component
 public class ImageConverter implements Converter<ImageEntity, Image> {
+
     @Override
     public Image convert(ImageEntity source) {
         return new Image(source.getImageName(),
@@ -25,6 +28,7 @@ public class ImageConverter implements Converter<ImageEntity, Image> {
                 source.getImageCatalogUrl(),
                 source.getImageCatalogName(),
                 source.getImageId(),
-                Collections.emptyMap());
+                StringUtils.isNotBlank(source.getSourceImage()) ? Map.of(ImagePackageVersion.SOURCE_IMAGE.getKey(), source.getSourceImage()) :
+                        Collections.emptyMap());
     }
 }
